[tool.poetry]
name = "reLVM"
version = "0.1.0a0"
description = "Reduction tools for LVM"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/albireox/reLVM"
repository = "https://github.com/albireox/reLVM"
documentation = "https://relvm.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "relvm", from = "src" }
]
include = ["src/relvm/etc/*"]

[tool.poetry.dependencies]
python = "^3.11,<4.0"
sdsstools = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.0.0"
matplotlib = ">=3.1.1"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
isort = ">=4.3.21"
ipdb = ">=0.12.3"
black = ">=20.8b1"
jedi = ">=0.17.2"

[tool.black]
line-length = 88
target-version = ['py311']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "gort"
known_typing = ["typing"]
known_sdss = ["sdsstools"]
lines_after_imports = 2

[tool.pytest.ini_options]
addopts = "--cov relvm --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["src/relvm/*"]
omit = [
    "*/__init__.py",
    "src/relvm/__main__.py",
    "src/relvm/exceptions.py"
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
